Add footer with links to original website & repo

--- a/cross_trainer.html
+++ b/cross_trainer.html
@@ -832,7 +832,9 @@
 			});
 		}
 	</script>
-
+	<h2>
+		This is a fork by edogaki. Here are the links to the <a href="https://or18.github.io/RubiksSolverDemo/">original website</a> and its <a href="https://github.com/or18/RubiksSolverDemo">source code</a>.
+	</h2>
 </body>
 
 </html>
