--- a/index.html
+++ b/index.html
@@ -4688,6 +4688,9 @@ Write the //setup comment in the appropriate position when viewing on alg.cubing
             });
         }
     </script>
+	<h2>
+		This is a fork by edogaki. Here are the links to the <a href="https://or18.github.io/RubiksSolverDemo/">original website</a> and its <a href="https://github.com/or18/RubiksSolverDemo">source code</a>.
+	</h2>
 </body>
 
 </html>
